Version 0.6.2
=============
* New plugin for handling zipped files.

Version 0.6.1
=============
* New rich error type: TransientErrorTest
* Get rich errors plugin to work well with xunit reporting.

Version 0.6.0
=============
* Force broken tests to also track the item number of an associated defect. This is a non-backward-compatible change, hence the version bump.

Version 0.5.2
=============
* Improve exception handling for @timeboxed

Version 0.5.1
=============
* Fix import errors

Version 0.5.0
=============
* New timed module (with @timeboxed decorator)
* Non-functional improvements.
* Rearrange and clean up code.

Version 0.4.8
=============
* Bug fix with handling NotImplementedError.

Version 0.4.7
=============
* Tweak decorator name for adding NotImplementedError.

Version 0.4.6
=============
* Add handling for NotImplementedError.

Version 0.4.5
=============
* Fix problem with copying class-level fixtures.

Version 0.4.4
=============
* Tweak display of broken tests.

Version 0.4.3
=============
* Fixes to rich error implementation (don't subclass SkipTest).

Version 0.4.2
=============
* Fixes to rich error plugin.

Version 0.4.1
=============
* Fixes to rich error plugin.

Version 0.4.0
=============
* Include plugin for displaying rich errors.

Version 0.3.0
=============
* Rename some of the rich error class decorators:
    * broken_test
    * irrelevant_test

Version 0.2.0
=============
* Include wrapper module with decorator helper functions.
* Include rich error classes, and some associated decorators.