@@ -1,1 +1,1 @@
-__version__ = "0.6.2alpha"
+__version__ = "0.6.2"
